# yr-ros-ws

./: .clang-format  .gitignore  README.md
src/four_bar/: CMakeLists.txt  package.xml
src/four_bar/config/: control.yaml
src/four_bar/launch/: gazebo.launch.py  spawn_model.launch.py
src/four_bar/urdf/: model.gazebo.xacro  model.xacro
src/yr_lle_app_demo/: CMakeLists.txt  package.xml
src/yr_lle_app_demo/include/yr_lle_app_demo/: message_statistics.cpp  message_statistics.h
src/yr_lle_app_demo/launch/: app_demo.launch.py
src/yr_lle_app_demo/src/: app_demo_node.cpp
src/yr_lle_controls/: package.xml  setup.cfg  setup.py
src/yr_lle_controls/yr_lle_controls/: angle_controller.py  frames_2024-03-26_16.07.13.gv
src/yr_lle_driver/: CMakeLists.txt
src/yr_lle_driver/launch/: spi_driver_ros_node.launch.py
src/yr_lle_driver/launch/usb_cam/: usb_cam_params.yaml
src/yr_lle_driver/src/: mcu_bridge_ros_node.cpp  periodic_tasks_node.cpp
src/yr_lle_driver/yr_lle_driver/: package.xml
src/yr_lle_driver/yr_lle_driver/launch/: mcu_bridge_ros_node.launch.py
src/yr_lle_driver/yr_lle_driver/launch/usb_cam/: run-usb-cam.sh
src/yr_lle_driver/yr_lle_driver/src/: mcu_bridge_ros_node.cpp  spi_driver_ros_node.cpp
src/yr_lle_msgs/: CMakeLists.txt  package.xml
src/yr_lle_msgs/msg/: BatteryInfo.msg  JointCmd.msg  JointCmdArray.msg  JointState.msg  LleDriverState.msg
src/yr_lle_msgs/yr_lle_msgs/msg/: JointCmdArray.msg  JointState.msg
src/yr_lle_sim/: CMakeLists.txt
src/yr_lle_sim/config/: control.yaml  simple_leg_control.yaml
src/yr_lle_sim/launch/: gazebo.launch.py  gazebo_model.launch.py  model.launch.py  rviz.launch.py  rviz_model.launch.py  spawn_simple_leg.launch.py
src/yr_lle_sim/rviz/: exo.rviz
src/yr_lle_sim/src/: publish_joint_states.py  test.py
src/yr_lle_sim/urdf/: .gitignore  exo.xacro  exo_without_human.xacro  human_dummy.xacro  macros.xacro  model_gazebo.xacro  properties.xacro  simple_leg.urdf
src/yr_lle_sim/worlds/: env1.world  exo_env.world  exo_env2.world  exo_env3.world  test.world  walking1.world
src/yr_lle_sim/yr_lle_sim/: CMakeLists.txt  package.xml
src/yr_lle_sim/yr_lle_sim/launch/: gazebo.launch.py
src/yr_lle_sim/yr_lle_sim/rviz/: exo.rviz
src/yr_lle_sim/yr_lle_sim/src/: walk_data.py
src/yr_lle_sim/yr_lle_sim/urdf/: exo.xacro  macros.xacro  properties.xacro
